force-app/main/default/objects/numm__Item__c/numm__Item__c.object-meta.xml
<CustomObject>
    <description>Objet des produits utilisés dans les modules de facturations et les schémas d&#39;écriture.</description>
    <label>Produit numm</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produits numm</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>