force-app/main/default/objects/numm__Item__c/fields/numm__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Saisir le compte hors taxe afin qu&#39;il soit récupéré lors de la comptabilisation des factures de ventes ou des schémas d&#39;écritures</inlineHelpText>
    <label>Compte général HT</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipLabel>Produits numm</relationshipLabel>
    <relationshipName>Produits_numm</relationshipName>
    <type>Lookup</type>
</CustomField>