force-app/main/default/objects/numm__Item__c/fields/numm__Analytic01__c.field-meta.xml
<CustomField>
    <fullName>numm__Analytic01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analytique 01</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__CostAccountingValues__c.numm__IdAxis__r.numm__RelatedAnalytics__c</field>
            <operation>equals</operation>
            <value>Analytique 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__CostAccountingValues__c</referenceTo>
    <relationshipLabel>Produits numm (Ana01)</relationshipLabel>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>