force-app/main/default/objects/numm__Item__c/fields/numm__Conditionnement__c.field-meta.xml
<CustomField>
    <fullName>numm__Conditionnement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conditionnement</label>
    <referenceTo>numm__Conditionnement__c</referenceTo>
    <relationshipLabel>Produits numm</relationshipLabel>
    <relationshipName>Produits_numm</relationshipName>
    <type>Lookup</type>
</CustomField>