force-app/main/default/objects/numm__Item__c/fields/numm__Description__c.field-meta.xml
<CustomField>
    <fullName>numm__Description__c</fullName>
    <inlineHelpText>Saisir la description du produit</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>