force-app/main/default/objects/numm__Item__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Produits numm</relationshipLabel>
    <relationshipName>Produits_numm</relationshipName>
    <type>Lookup</type>
</CustomField>