force-app/main/default/objects/numm__Item__c/fields/numm__Famille_de_produit__c.field-meta.xml
<CustomField>
    <fullName>numm__Famille_de_produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Famille de produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Famille de produit</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>numm__Item__c</referenceTo>
    <relationshipLabel>Produits numm</relationshipLabel>
    <relationshipName>Produits_numm</relationshipName>
    <type>Lookup</type>
</CustomField>