force-app/main/default/objects/numm__Item__c/fields/numm__IdCtrlAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IdCtrlAccounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collectif du tiers principal</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipName>Prestations1</relationshipName>
    <type>Lookup</type>
</CustomField>