force-app/main/default/objects/numm__Item__c/fields/numm__IdOtherCtrlAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IdOtherCtrlAccounting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Collectif attaché au compte général Hors taxe, Différent de Client ou Fournisseur.</description>
    <label>Collectif</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>