force-app/main/default/objects/numm__Item__c/fields/numm__IdOtherThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdOtherThirdParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tiers associé au collectif, différent de Client et de Fournisseur</description>
    <label>Tiers du compte général</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipName>Prestations</relationshipName>
    <type>Lookup</type>
</CustomField>