force-app/main/default/objects/numm__Item__c/fields/numm__IdThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__IdThirdParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client ou fournisseur</description>
    <label>Tiers Principal</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipName>Prestations1</relationshipName>
    <type>Lookup</type>
</CustomField>