force-app/main/default/objects/numm__Item__c/fields/numm__InitComm__c.field-meta.xml
<CustomField>
    <fullName>numm__InitComm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reprendre la description sur la facture en commentaire</inlineHelpText>
    <label>Reprendre la description sur la facture</label>
    <type>Checkbox</type>
</CustomField>