force-app/main/default/objects/numm__Item__c/fields/numm__IsGDT__c.field-meta.xml
<CustomField>
    <fullName>numm__IsGDT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Produit pour la gestion des temps</description>
    <label>Gestion des temps</label>
    <type>Checkbox</type>
</CustomField>