force-app/main/default/objects/numm__Item__c/fields/numm__IsNDF__c.field-meta.xml
<CustomField>
    <fullName>numm__IsNDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Produit pour les notes de frais</description>
    <label>Note de frais</label>
    <type>Checkbox</type>
</CustomField>