force-app/main/default/objects/numm__Item__c/fields/numm__ItemCode__c.field-meta.xml
<CustomField>
    <fullName>numm__ItemCode__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Code Prestation alpha numérique sur 20 caractères</inlineHelpText>
    <label>Code Produit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>