force-app/main/default/objects/numm__Item__c/fields/numm__TechRateTVA__c.field-meta.xml
<CustomField>
    <fullName>numm__TechRateTVA__c</fullName>
    <formula>numm__IdTvaRate__r.numm__Taux_de_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Rate TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>