force-app/main/default/objects/numm__Item__c/fields/numm__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>numm__UnitPrice__c</fullName>
    <label>Prix Unitaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>