force-app/main/default/objects/numm__Item__c/recordTypes/numm__Famille_de_produit.recordType-meta.xml
<RecordType>
    <fullName>numm__Famille_de_produit</fullName>
    <active>true</active>
    <label>Famille de produit</label>
</RecordType>