force-app/main/default/objects/numm__Item__c/recordTypes/numm__Produit.recordType-meta.xml
<RecordType>
    <fullName>numm__Produit</fullName>
    <active>true</active>
    <label>Produit</label>
</RecordType>