force-app/main/default/objects/numm__Item__c/validationRules/numm__CompteGeneralHT.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CompteGeneralHT</fullName>
    <active>true</active>
    <description>Le compte général doit obligatoirement être de catégorie HT.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &#39;Produit&#39;,
TEXT(numm__AccountingCode__r.numm__Categorie_de_compte__c)  &lt;&gt;  &#39;HT&#39;
)</errorConditionFormula>
    <errorDisplayField>numm__AccountingCode__c</errorDisplayField>
    <errorMessage>Le compte général doit obligatoirement être de catégorie HT.</errorMessage>
</ValidationRule>