force-app/main/default/objects/numm__Item__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>NAME</columns>
    <columns>numm__ItemCode__c</columns>
    <columns>numm__AccountingCode__c</columns>
    <columns>numm__IdTvaRate__c</columns>
    <columns>numm__IdOtherThirdParty__c</columns>
    <columns>numm__IdThirdParty__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>