force-app/main/default/objects/numm__Item__c/listViews/numm__Tous_les_produits.listView-meta.xml
<ListView>
    <fullName>numm__Tous_les_produits</fullName>
    <columns>NAME</columns>
    <columns>numm__IdTvaRate__c</columns>
    <columns>numm__AccountingCode__c</columns>
    <columns>numm__ItemCode__c</columns>
    <columns>numm__UnitPrice__c</columns>
    <columns>numm__Famille_de_produit__c</columns>
    <columns>numm__IdOtherThirdParty__c</columns>
    <columns>numm__IdThirdParty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>numm__Item__c.numm__Produit</value>
    </filters>
    <label>Tous les produits</label>
</ListView>