force-app/main/default/objects/numm__Item__c/listViews/numm__Toutes_les_familles_de_produits.listView-meta.xml
<ListView>
    <fullName>numm__Toutes_les_familles_de_produits</fullName>
    <columns>NAME</columns>
    <columns>numm__ItemCode__c</columns>
    <columns>numm__AccountingCode__c</columns>
    <columns>numm__IdTvaRate__c</columns>
    <columns>numm__IdOtherThirdParty__c</columns>
    <columns>numm__IdThirdParty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>numm__Item__c.numm__Famille_de_produit</value>
    </filters>
    <label>Toutes les familles de produits</label>
    <language>fr</language>
</ListView>